# shobdo

./: .dockerignore  .gitignore  BACKLOG.md  Links.txt  Makefile  Readme.md  Readme.txt  Spec.txt  SpecAndHelp.txt  Specs.txt  docker-compose.yml
application/: Readme.md  Readme.txt
application/dict-app/: Dockerfile  Makefile  Readme.md  build.sbt  build_activator_dist_in_docker.sh  build_dict_app_docker.sh  build_docker.sh  build_in_docker.sh  build_local.sh  docker-compose.yml  run_local.sh  run_tests.sh  test.sh  test_dinghy.sh
application/shobdo-app/: .jvmopts  Dockerfile  Makefile  Readme.md  build.sbt
client/: .eslintrc  Dockerfile  Makefile  README.md  build_docker_web_client.sh  nginx.conf  nginx_local.conf  nginx_render.conf  package.json  ref.txt
data/: bdict.db
deploy/: Dockerfile  docker-compose-combined.yml  docker-compose.yml  local.env.template  nginx_combined.conf  supervisord.conf
docs/: PublicSchema.txt
scripts/: Bangla.java  Depricated_Python_ScrappedDB_Parser.py  Depricated_create_table.sql  Misc_Build_Run.sh  README.md  Set_Unicode_On_bash_profile_sh  createRandomWords.sh  create_table.sql  curl_api_test_commands.sh  generate-sitemap.mjs  mongo_docker_cli.sh  parser.py  redis_docker_cli_raw.sh  run_dict_app_docker.sh  run_mongo.sh  run_mongo_docker.sh  run_mysql_docker.sh  run_play_java_docker.sh  run_play_misc.sh  run_redis_docker.sh  run_shobdo_client_docker.sh  run_shobdo_dev_env.sh  run_shobdo_docker.sh  test_endpoint_docker_compose.sh
scripts/python_enrichment/: .gitignore  .pre-commit-config.yaml  _back_entries_require_enrichment.json  completed_references_back.json  entires_requiring_enrichment.json  pyproject.toml  run.sh  tmp.txt
scripts/python_enrichment/data/: missing_words_compact.json
scripts/python_enrichment/src/: config.py  extract_word_references.py  find_missing_words.py  logger.py  main.py  previous_scripts.py  util.py  utils.py  utils_context.py
scripts/python_enrichment/src/analytics/: query_analytics.py
scripts/python_enrichment/src/cleanup/: ai_classifier.py  archiver.py  batch_processor.py
scripts/python_enrichment/src/discovery/: __init__.py  generate_prefix_sets.py  query_prefix_sets.py
scripts/python_enrichment/src/extraction/: export_root_words.py  extract_word_references.py  find_missing_words.py  find_non_bengali_words.py
scripts/python_enrichment/src/generation/: generate_missing_entries.py  merge_entries.py  upload_missing_entries.py  utils_missing.py
scripts/python_enrichment/src/legacy/: main.py  previous_scripts.py
scripts/python_enrichment/src/store/: __init__.py  snapshot.py  transaction.py
scripts/python_enrichment/src/word_client/: __init__.py  client.py  models.py
view/: index.html
(+302 files in other folders)
