[tool.poetry]
name = "python-enrichment"
version = "0.1.0"
description = ""
authors = ["Tahsin Kabir <tahsinkabir@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.7.1"
google-generativeai = "^0.8.4"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
gspread = "^6.1.4"
pandas = "^2.2.3"
google-api-python-client = "^2.159.0"
openai = "^1.60.1"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
ruff = "^0.3.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
start = "python_enrichment.src:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/python_enrichment/src/util.py" = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
